# SEII-code-challenge

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: Main.cpp
